--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@pfzw90/ajs",
+  "name": "@pfzw90/ajs-clone",
   "version": "1.0.0",
-  "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/pfzw90/ajs/issues"
   },
-  "homepage": "https://github.com/pfzw90/ajs#readme"
+  "homepage": "https://github.com/pfzw90/ajs#readme",
+  "description": "",
+  "dependencies": {
+    "@pfzw90/ajs": "^1.0.0"
+  }
 }
